# query-pager

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
examples/: fastapi_example.py  fastapi_example_advanced.py
src/query_pager/: __init__.py
src/query_pager/core/: __init__.py  cel_parser.py  cel_visitor.py  cursor.py  exceptions.py  keyset.py  ordering.py  schemas.py
src/query_pager/django/: __init__.py  filtering.py  keyset.py  ordering.py  pagination.py
src/query_pager/sqlalchemy/: __init__.py  filtering.py  keyset.py  ordering.py  pagination.py
tests/: conftest.py  django_settings.py
tests/django_app/: __init__.py  apps.py  models.py
tests/test_core/: test_cel_parser.py  test_cursor.py  test_exceptions.py  test_keyset.py  test_ordering.py  test_schemas.py
tests/test_django/: __init__.py  conftest.py  test_cursor_ordering.py  test_edge_cases.py  test_filtering.py  test_include_prev_cursor.py  test_integration.py  test_ordering.py  test_pagination.py  test_unit.py
tests/test_sqlalchemy/: conftest.py  test_cursor_ordering.py  test_edge_cases.py  test_filtering.py  test_include_prev_cursor.py  test_integration.py  test_multi_field_pagination.py  test_ordering.py  test_pagination.py  test_pagination_async.py
